[workspace]
members = [".", "migration"]

[package]
name = "study-n"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "study_n"

[dependencies]
dotenv = "0.15.0"
migration = { path = "migration" } # depends on your needs

rust-embed = "8.5.0"
salvo = { version = "0.73.0", features = ["full"] }
sea-orm = "1.1.0"
serde_json = "1.0.128"
serde = "1"
socketioxide = { version = "0.14.1", features = [
    "tracing",
    "extensions",
    "state",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
jsonwebtoken = "9.3.0"
time = "0.3.36"

[[bin]]
name = "study-n"
